Agregé oen graph a index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <meta property="og:title" content="Pintertsocean">
+<meta property="og:type" content="Layout Pintertsocean">
+<meta property="og:url" content="https://mariofernandezserrano.github.io/pintertsocean/index.html">
+<meta property="og:image" content="https://raw.githubusercontent.com/mariofernandezserrano/pintertsocean/master/image/mar04.jpg">
   <title>Layout PinterOcean</title>
 </head>
 
